# Automatic-Test-Project

./: CMakeLists.txt  Farbe.cpp  Farbe.hpp  PPM_Datei.cpp  PPM_Datei.hpp  PPM_File.hpp  PPM_Format.cpp  PPM_Format.hpp  README.md  aufg_09_mandelbrot.cpp  aufg_09_ppm.cpp  cicd_test.txt  farbe_unit_tests.cpp  gitlab-ci.yml  test.cpp
